Fix lab update not showing after update

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -13,12 +13,13 @@ body {
   font-family: "Poppins";
 }
 
-header {
+header div{
   background: #fff;
+  max-width: 98%;
 }
 
 header .container {
-  max-width: 1400px;
+  width: 100%;
   margin: 0 auto;
   padding: 10px 20px;
   display: flex;
